--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,9 +7,11 @@
     "fabric": "^6.6.0",
     "firebase": "^11.3.1",
     "jspdf": "^3.0.0",
+    "pdfjs-dist": "^4.10.38",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "react-pdf": "^9.2.1",
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
     "socket.io-client": "^4.8.1",
