--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "pdfjs-dist": "^4.10.38",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.4.0",
     "react-pdf": "^9.2.1",
     "react-router-dom": "^7.1.5",
